Update Dallas config

--- a/GameData/Mekhlin/Korben/KopernicusConfigs/Dallas.cfg
+++ b/GameData/Mekhlin/Korben/KopernicusConfigs/Dallas.cfg
@@ -1,134 +1,379 @@
-@Kopernicus:AFTER[Korben]
+@Kopernicus:FOR[Korben]
 {
     Body
     {
         name = Dallas
-        cacheFile = Mekhlin/Cache/Dallas.bin
-        
+
+		Debug
+		{
+			exportMesh = true
+			update = true
+		}
+		cacheFile = Mekhlin/Cache/Dallas.bin
         Template
         {
-            name = Gilly
-            removePQSMods = PQSLandControl
+            name = Moho
+			removePQSMods = FlattenOcean, VertexSimplexNoiseColor, HeightColorMap
         }
         Properties
         {
-            description = Small moon orbiting Korben
-            radius = 35000
-            mass = 3.3535382e+18
-            geeASL = 0.0249847093
-        }
-        ScaledVersion
-        {
-            Material
-            {
-                texture = Mekhlin/Korben/PluginData/Dallas_color.dds
-                normals = Mekhlin/Korben/PluginData/Dallas_normal.dds
-            }
+			displayName = Dallas
+            radius = 150000
+            geeASL = 0.148
+            rotates = true
+			rotationPeriod = 106309.606989054
+			tidallyLocked = false
+		    description = Small moon orbiting Korben
+			timewarpAltitudeLimits = 0 3544 7088 14175 28350 56700 113400 226800
+			ScienceValues
+			{
+				landedDataValue = 11.5
+				splashedDataValue = 1
+				flyingLowDataValue = 1
+				flyingHighDataValue = 1
+				inSpaceLowDataValue = 12
+				inSpaceHighDataValue = 10
+				recoveryValue = 11
+				spaceAltitudeThreshold = 118000
+			}			
         }
         Orbit
         {
             referenceBody = Korben
-            color = #987549
+            color = #585858
             inclination = -5.3
             eccentricity = 0.450000011920929
-            semiMajorAxis = 4500000 
+            semiMajorAxis = 3500000 
             longitudeOfAscendingNode = 0
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 0
             epoch = 0
         }
-        PQS
+		ScaledVersion
         {
-            fadeStart = 68800
-			fadeEnd = 137600
-			deactivateAltitude = 138288
+			fadeStart = 95000
+            fadeEnd = 97000
+            Material
+            {	
+                texture = Mekhlin/Korben/PluginData/Dallas_color.dds
+                normals = Mekhlin/Korben/PluginData/Dallas_normal.dds
+				shininess = 0
+                specColor = 0,0,0,0
+            }
+        }
+		PQS
+        {
+			fadeStart = 94500
+			fadeEnd = 189000
+			deactivateAltitude = 189945
+			minLevel = 2
+			maxLevel = 8
+			minDetailDistance = 6
+			maxQuadLengthsPerFrame = 0.03
 			allowFootprints = True
 			Material
 			{
 				saturation = 1
-				contrast = 1.35
-				tintColor = 1,1,1,0
-				groundTexStart = 0
-				groundTexEnd = 9000
-				steepTexStart = 0
-				steepTexEnd = 9000				
-				steepTex = CTTP/Textures/PluginData/gravel.dds
-				steepBumpMap = CTTP/Textures/PluginData/gravel_normal.dds
-				steepNearTiling = 2500
-				steepTiling = 25
-				lowTex = CTTP/Textures/PluginData/sand.dds
-				lowBumpMap = CTTP/Textures/PluginData/sand_normal.dds
-				lowNearTiling = 5000
-				lowMultiFactor = 50
-				lowBumpNearTiling = 5000
-				lowBumpFarTiling = 50
-				midTex = CTTP/Textures/PluginData/gravel.dds
-				midBumpMap = CTTP/Textures/PluginData/gravel_normal.dds
-				midNearTiling = 5000
-				midMultiFactor = 50
-				midBumpNearTiling = 5000
-				midBumpFarTiling = 50
-				highTex = CTTP/Textures/PluginData/sand.dds
-				highBumpMap = CTTP/Textures/PluginData/sand_normal.dds
-				highNearTiling = 5000
-				highMultiFactor = 50
-				highBumpNearTiling = 5000
-				highBumpFarTiling = 50				
-				lowStart = 0
-				lowEnd = 0.28
-				highStart = 0.66
-				highEnd = 1
+                contrast = 3
+                tintColor = 1.000,1.000,1.000,0.000
+                powerNear = 0.6
+                powerFar = 0.2
+                groundTexStart = 0
+                groundTexEnd = 1000
+				
+                steepPower = 2
+                steepTexStart = 0
+                steepTexEnd = 50000
+                steepTex = CTTP/Textures/PluginData/gravel.dds
+                steepBumpMap = CTTP/Textures/PluginData/gravel_normal.dds
+                steepNearTiling = 8000
+                steepTiling = 500
+				
+                lowTex = CTTP/Textures/PluginData/sand.dds
+                lowBumpMap = CTTP/Textures/PluginData/sand_normal.dds
+                lowNearTiling = 2000
+                lowMultiFactor = 10
+                lowBumpNearTiling = 2000
+                lowBumpFarTiling = 10
+				
+                midTex = CTTP/Textures/PluginData/sand.dds
+                midBumpMap = CTTP/Textures/PluginData/sand_normal.dds
+                midNearTiling = 4000
+                midMultiFactor = 10
+                midBumpNearTiling = 8000
+                midBumpFarTiling = 10
+				
+                highTex = CTTP/Textures/PluginData/rock.dds
+                highBumpMap = CTTP/Textures/PluginData/rock_normal.dds
+                highNearTiling = 4000
+                highMultiFactor = 10
+                highBumpNearTiling = 4000
+                highBumpFarTiling = 10
+				
+                lowStart = 0
+                lowEnd = 0.3
+                highStart = 0.8
+                highEnd = 1
 			}
             Mods
-            {               
-                VertexColorMap
-                {
-                    map = Mekhlin/Korben/PluginData/Dallas_color.dds
-                    order = 10
+            {	
+				VertexHeightMap
+				{
+					map = Mekhlin/Korben/PluginData/Dallas_height.dds
+					offset = 0
+					deformity = 100
+					scaleDeformityByRadius = False
+					order = 10
+					enabled = True
+				}
+                VertexSimplexHeightAbsolute
+				{
+					seed = 9834534
+					deformity = 400
+					octaves = 8
+					persistence = 0.5
+					frequency = 24
+					enabled = true
+					order = 20
+				}				
+				VertexSimplexHeight
+				{
+					seed = 408934
+					deformity = 200
+					octaves = 8
+					persistence = 0.5
+					frequency = 4
+					enabled = true
+					order = 30
+				}		
+				VertexHeightNoiseVertHeightCurve2
+				{
+					deformity = 300
+					ridgedAddFrequency = 32
+					ridgedAddLacunarity = 2
+					ridgedAddOctaves = 8
+					ridgedAddSeed = 83482211
+					ridgedMode = Low
+					ridgedSubFrequency = 32
+					ridgedSubLacunarity = 2
+					ridgedSubOctaves = 8
+					ridgedSubSeed = 1111452343
+					simplexFrequency = 24
+					simplexHeightEnd = 2000
+					simplexHeightStart = 0
+					simplexOctaves = 8
+					simplexPersistence = 0.5
+					simplexSeed = 780234980
+					order = 40
+					enabled = True
+					simplexCurve
+					{
+						key = 0 0 0 0
+						key = 0.6311918 0.4490898 1.432598 1.432598
+						key = 1 1 0 0
+					}
+				}
+				VoronoiCraters
+				{
+					colorOpacity = 0.7
+					DebugColorMapping = False
+					deformation = 200
+					jitter = 0.1
+					jitterHeight = 3
+					rFactor = 1
+					rOffset = 1
+					simplexFrequency = 120
+					simplexOctaves = 3
+					simplexPersistence = 0.5
+					simplexSeed = 3423432
+					voronoiDisplacement = 0
+					voronoiFrequency = 28
+					voronoiSeed = 8904239
+					order = 50
+					enabled = True
+					CraterCurve
+					{
+						key = -0.9982381 -0.7411783 -0.06500059 -0.06500059
+						key = -0.9332262 -0.7678316 -0.2176399 -0.2176399
+						key = -0.8990405 -0.7433339 -2.560626 -2.560626
+						key = -0.7445966 -0.8581167 0.4436148 0.4436148
+						key = -0.4499771 -0.1392395 5.289535 5.289535
+						key = -0.4015177 0.2551735 9.069458 -2.149609
+						key = -0.2297457 0.002857953 -0.4453675 -0.4453675
+						key = 0.2724952 0.00423781 -0.01884932 -0.01884932
+						key = 0.9998434 -0.004090764 0.01397126 0.01397126
+					}
+					JitterCurve
+					{
+						key = -1.000701 0.4278412 0.1577609 0.1577609
+						key = -0.7884969 0.09487452 -0.7739663 -0.7739663
+						key = -0.6091803 0.072019 0.123537 0.123537
+						key = -0.3930514 0.3903495 3.300831 3.300831
+						key = -0.3584836 0.8643304 0.07139917 0.07139917
+						key = -0.2988068 0.002564805 -0.01814346 -0.01814346
+						key = 0.9970253 0.003401639 0 0
+					}
+				}
+				VertexColorMap
+				{
+					map = Mekhlin/Korben/PluginData/Dallas_color.dds
+					order = 60
+					enabled = True
+				}
+				LandControl
+				{
+					altitudeBlend = 0
+					altitudeFrequency = 1
+					altitudeOctaves = 1
+					altitudePersistance = 1
+					altitudeSeed = 1
+					createColors = False
+					createScatter = True
+					latitudeBlend = 0
+					latitudeFrequency = 1
+					latitudeOctaves = 1
+					latitudePersistance = 1
+					latitudeSeed = 1
+					longitudeBlend = 0
+					longitudeFrequency = 1
+					longitudeOctaves = 1
+					longitudePersistance = 1
+					longitudeSeed = 1
+					useHeightMap = False
+					vHeightMax = 10000
+					order = 70
                     enabled = True
-                }
-
-                // A name = value must be entered, as we use this mod twice on the same body
-                //
-                // Lets call this one Base
-                VertexSimplexHeightAbsolute
-                {
-                    name = Base
-                    seed = 222
-                    deformity = 10000
-                    octaves = 3
-                    persistence = 0.75
-                    frequency = 0.5
-                    enabled = true
-                    order = 20
-                }
-                
-                // And let's call this one Ridges
-                VertexSimplexHeightAbsolute
-                {
-                    name = Ridges
-                    seed = 111
-                    deformity = 5000
-                    octaves = 6
-                    persistence = 0.5
-                    frequency = 3
-                    enabled = true
-                    order = 30
-                }
-                VertexHeightNoise
-                {
-                    noiseType = RiggedMultifractal
-                    deformity = 200
-                    seed = 111
-                    frequency = 3
-                    lacunarity = 2.5
-                    persistance = 0.5
-                    octaves = 6
-                    mode = Low
-                    enabled = true
-                    order = 40
-                }
+					altitudeSimplex
+					{
+						frequency = 1
+						octaves = 1
+						persistence = 1
+					}
+					latitudeSimplex
+					{
+						frequency = 1
+						octaves = 1
+						persistence = 1
+					}
+					longitudeSimplex
+					{
+						frequency = 1
+						octaves = 1
+						persistence = 1
+					}
+					landClasses
+					{
+						Class
+						{
+							alterApparentHeight = 0
+							alterRealHeight = 0
+							color = 0,0,0,0
+							coverageBlend = 0
+							coverageFrequency = 1
+							coverageOctaves = 1
+							coveragePersistance = 1
+							coverageSeed = 1
+							name = Base
+							latDelta = 1
+							latitudeDouble = False
+							lonDelta = 1
+							minimumRealHeight = 0
+							noiseBlend = 0
+							noiseColor = 0,0,0,0
+							noiseFrequency = 1
+							noiseOctaves = 1
+							noisePersistance = 1
+							noiseSeed = 1
+							delete = False
+							altitudeRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
+							coverageSimplex
+							{
+								frequency = 1
+								octaves = 1
+								persistence = 1
+							}
+							latitudeDoubleRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
+							latitudeRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
+							longitudeRange
+							{
+								endEnd = 2
+								endStart = 2
+								startEnd = -1
+								startStart = -1
+							}
+							noiseSimplex
+							{
+								frequency = 1
+								octaves = 1
+								persistence = 1
+							}
+							scatters
+							{
+								Scatter
+								{
+									density = 0.8
+									scatterName = ice_boulder
+								}
+							}
+						}
+					}
+					scatters
+					{
+						Scatter
+						{
+                            name = ice_boulder
+							materialType = BumpedDiffuse
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 1.25
+							maxScatter = 20
+							maxSpeed = 1000
+							minScale = 0.75
+							recieveShadows = True
+							seed = 2344623
+							verticalOffset = -0.15
+							delete = False
+							collide = True
+							science = False
+							Material
+							{
+								color = RGBA(193, 192, 188, 255)
+								mainTex = CTTP/Textures/PluginData/ice.dds
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+								bumpMap = CTTP/Textures/PluginData/ice_normal.dds
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+						}
+					}
+				}
             }
-        }
-    }
+        }		
+    }	
 }
